WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282946
[iOS] thesaurus.com: Unable to select text
https://bugs.webkit.org/show_bug.cgi?id=282946
Summary
[iOS] thesaurus.com: Unable to select text
Aditya Keerthi
Reported
2024-11-11 11:45:20 PST
rdar://138789765
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-11-11 12:09:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36499
EWS
Comment 2
2024-11-12 13:53:23 PST
Committed
286499@main
(f5ae761ea033): <
https://commits.webkit.org/286499@main
> Reviewed commits have been landed. Closing PR #36499 and removing active labels.
EWS
Comment 3
2024-12-04 16:01:22 PST
Committed
283286.564@safari-7620-branch
(62f26335eb4f): <
https://commits.webkit.org/283286.564@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2372 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug