[iOS] thesaurus.com: Unable to select text https://bugs.webkit.org/show_bug.cgi?id=282946 rdar://138789765

Reviewed by Abrar Rahman Protyasha.

thesaurus.com runs script from player.anyclip.com, which adds a `touchstart`
listener to the document element, when the user agent does not contain Chrome
and Android. Inside this `touchstart` listener, the script calls
`window.getSelection().removeAllRanges()` after a 1 second delay. This results
in the selection getting cleared after the user attempts to select text.

Fix by adding a quirk to add Chrome and Android to the reported user agent in
this scenario. The quirk is scoped to thesaurus.com and the script from
player.anyclip.com to reduce risk, as the original intention of the `touchstart`
listener is unclear.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::scriptToEvaluateBeforeRunningScriptFromURL):

Canonical link: https://commits.webkit.org/286499@main